--- a/mood.css
+++ b/mood.css
@@ -7,7 +7,7 @@ and open the template in the editor.
 
 /*
     Created on : Nov 8, 2016, 5:43:28 PM
-    Author     : User
+    Author     : Ilze
 */
 
 * {
@@ -34,13 +34,17 @@ body {
     width: 1140px;
     margin: 0 auto;
 }
+.main-width-header {
+    width: 1230px;
+    margin: 0 auto;
+}
 
 .block-title {
     color: #fff;
     font-size: 30px;
     font-weight: 400;
     padding-bottom: 60px;
-    padding-top: 110px;
+    padding-top: 80px;
     text-transform: uppercase;
 }
 
@@ -51,7 +55,7 @@ a, a:link, a:visited {
 }
 
 
-/*<!-- ************************************* header ***************************************  -->*/
+/* ************************************* header ***************************************  */
 
 .navigation-container {
     background-color: rgb(211, 53, 35);
@@ -111,14 +115,6 @@ a, a:link, a:visited {
     max-width: 100%;
 }
 
-.slider-vertical {
-    width: 0;
-    position: absolute;
-    top: 50%;
-    right: 4%;
-    transform: translateY(-50%);
-}
-
 .slider-button {
     border-radius: 50px;
     width: 9px;
@@ -127,11 +123,6 @@ a, a:link, a:visited {
     border: 1px solid #fff;
     background: transparent;
     padding: 0;
-}
-
-.slider-vertical button:hover, button.active, .slider-vertical button.active {
-    background: #fff;
-    cursor: pointer;
 }
 
 .main-description {
@@ -165,95 +156,6 @@ a, a:link, a:visited {
 
 /*<!-- ************************************* header END ***************************************  -->*/
 
-
-/*<!-- ********************************** work container ***************************************  -->*/
-
-.work-container {
-    background-image: url("pictures/bg-green.svg");
-    background-size: cover;
-    background-position: center;
-}
-
-.about-our-work {
-    line-height: 1.5;
-    padding-bottom: 15px;
-    opacity: 0.8;
-    font-size: 17px;
-}
-
-.work-btn {
-    margin: 25px;
-    text-transform: uppercase;
-    border: 1px solid transparent;
-    background-color: transparent;
-    color: #fff;
-}
-
-.work-nav .work-btn {
-    padding: 6px 13px;
-    font-size: 13px;
-    font-weight: 400;
-    border: 1px solid;
-    border-radius: 5px;
-    background-color: transparent;
-}
-
-.work-btn:hover, .work-btn.active {
-    background: rgba(0,100,0,0.5);
-}
-
-.our-work-block {
-    width: 25%;
-    float: left;
-}
-
-.our-work-block img {
-    width: 100%;
-    height: 100%;
-    display: block;
-}
-
-.our-work-image {
-    position: relative;
-}
-
-.work-heading {
-    font-size: 18px;
-    font-weight: 400;
-    padding-bottom: 10px;
-}
-
-.work-comments {
-    font-size: 14px;
-    font-weight: 300;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.work-comments i {
-    padding-bottom: 35px;
-    opacity: 0.5;
-}
-
-.work-overlay {
-    position: absolute;
-    background-color: rgba(86, 171, 104, 0.8);
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    visibility: hidden;
-}
-
-.our-work-image:hover .work-overlay {
-    visibility: visible;
-}
-
-
-/*<!-- ********************************** work container ***************************************  -->*/
 
 
 /*<!-- ************************************* team container ***************************  -->*/
@@ -372,7 +274,6 @@ a, a:link, a:visited {
   flex-basis: 100%;
   width: 100%;
   transition: transform 1s ease-in-out
-    /*display: inline-block;*/
 }
 
 /*<!-- *********************************** team container END *****************************  -->*/
@@ -396,6 +297,10 @@ a, a:link, a:visited {
     margin-bottom: 10px;
 }
 
+input[placeholder="Vārds Uzvārds"] {
+    color: #fff;
+    font-weight: bold;
+}
 input[type="text"] {
     font-size: 13px;
     color: #fff;
